src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwF1000-dhU-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\ndefault window height: U\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 688, bounds: 1239 × 688, states: [Activated]
