src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwF1000-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "default column width: F1000\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 1000 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 688, bounds: 1248 × 688, states: [Activated]
